--- a/exemplo2/index.html
+++ b/exemplo2/index.html
@@ -9,9 +9,7 @@
 <body>
 	<header>
 		<h1>Comentários</h1>
-		<h2>Um App simples que permite que um usuário insira comentários</h2>
-		<hr>
-
+		<p>Um App simples que permite que um usuário insira comentários</p>	
 	</header>
 	<main>
 		<section class="comment-input">
