mensagem ao clicar no botão

--- a/exemplo2/index.html
+++ b/exemplo2/index.html
@@ -14,7 +14,7 @@
 	<main>
 		<section class="comment-input">
 		<p>Adicione Seu Comentário:</p>
-		<input type="text" name="#"><button>+</button>	
+		<input><button>+</button>	
 		</section>
 		<section class="comments">
 			<p>Este é o primeiro!</p>
@@ -23,7 +23,6 @@
 			<p>Este é mais um!</p>
 			
 		</section>
-		<hr>
 	</main>
 	<footer>
 	<h4>Este serviço é de domínio publico</h4>	
